WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
62683
[Chromium][Qt] Some slider clicking tests fail
https://bugs.webkit.org/show_bug.cgi?id=62683
Summary
[Chromium][Qt] Some slider clicking tests fail
Kent Tamura
Reported
2011-06-14 17:48:59 PDT
By
r88757
, the following three tests fail on Chromium-win and Chromium-linux: fast/forms/slider-delete-while-dragging-thumb.html fast/forms/slider-mouse-events.html fast/forms/slider-onchange-event.html The following test fails on Qt-Linux: fast/forms/slider-onchange-event.html Probably because of slider thumb size differences.
Attachments
Patch
(7.85 KB, patch)
2011-06-14 23:05 PDT
,
Kent Tamura
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ec2-cr-linux-01
(1.32 MB, application/zip)
2011-06-14 23:20 PDT
,
WebKit Review Bot
no flags
Details
Patch 2
(8.56 KB, patch)
2011-06-14 23:45 PDT
,
Kent Tamura
dglazkov
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Kent Tamura
Comment 1
2011-06-14 22:55:37 PDT
The trigger of the failures is
r88757
, but the root cause is not
r88757
.
Kent Tamura
Comment 2
2011-06-14 23:05:29 PDT
Created
attachment 97235
[details]
Patch
WebKit Review Bot
Comment 3
2011-06-14 23:19:59 PDT
Comment on
attachment 97235
[details]
Patch
Attachment 97235
[details]
did not pass chromium-ews (chromium-xvfb): Output:
http://queues.webkit.org/results/8841557
New failing tests: fast/forms/slider-mouse-events.html
WebKit Review Bot
Comment 4
2011-06-14 23:20:04 PDT
Created
attachment 97236
[details]
Archive of layout-test-results from ec2-cr-linux-01 The attached test failures were seen while running run-webkit-tests on the chromium-ews. Bot: ec2-cr-linux-01 Port: Chromium Platform: Linux-2.6.35-28-virtual-x86_64-with-Ubuntu-10.10-maverick
Kent Tamura
Comment 5
2011-06-14 23:45:49 PDT
Created
attachment 97239
[details]
Patch 2 Remove a Chromium-specific result
Kent Tamura
Comment 6
2011-06-15 21:39:07 PDT
Thank you for reviewing. Landed:
http://trac.webkit.org/changeset/89004
Mark Rowe (bdash)
Comment 7
2011-07-11 13:36:43 PDT
This broke scrubbing in the timeline of media elements. See
bug 64314
for details.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug