2011-06-15  Kent Tamura  <tkent@chromium.org>

Reviewed by Dimitri Glazkov.

        [Chromium][Qt] Some slider clicking tests fail.
        https://bugs.webkit.org/show_bug.cgi?id=62683

        When we pressed a mouse button on a slider thumb,
        SliderThumbElement::startDragging() were called twice.
         - From SliderThumbElement::defaultEventHandler(), and
         - from RangeInputType::handleMouseDownEvent()
        The latter is not needed. We should call setDefaultHandled() correctly.

        * html/RangeInputType.cpp:
        (WebCore::RangeInputType::handleMouseDownEvent): Calls setDefaultHandled()
        * html/shadow/SliderThumbElement.cpp:
        (WebCore::SliderThumbElement::setPositionFromPoint): Remove FIXME comments.
        (WebCore::SliderThumbElement::defaultEventHandler): Calls setDefaultHandled()

2011-06-15  Kent Tamura  <tkent@chromium.org>

        Reviewed by Dimitri Glazkov.

        [Chromium][Qt] Some slider clicking tests fail.
        https://bugs.webkit.org/show_bug.cgi?id=62683

        * fast/forms/slider-mouse-events-expected.txt:
        * fast/forms/slider-mouse-events.html: Add step=5 to ignore small difference of thumb sizes.
        * platform/chromium-win/fast/forms/slider-mouse-events-expected.txt: Removed.
        * platform/chromium/test_expectations.txt:
        * platform/qt/Skipped: slider-onchange-event.html should pass by this change.

Canonical link: https://commits.webkit.org/78347@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@89004 268f45cc-cd09-0410-ab3c-d52691b4dbfc